--- a/Choose.ui
+++ b/Choose.ui
@@ -103,7 +103,7 @@ color: rgb(255, 255, 255);</string>
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>中译英选择练习-配置页面</string>
+    <string>中译英选择练习</string>
    </property>
   </widget>
   <widget class="QLabel" name="labelLocation">
