--- a/SpellMenu.ui
+++ b/SpellMenu.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Choose</class>
- <widget class="QFrame" name="Choose">
+ <class>SpellMenu</class>
+ <widget class="QFrame" name="SpellMenu">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,38 +16,12 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(81, 81, 81);</string>
   </property>
-  <widget class="QPushButton" name="pushButtonNext">
+  <widget class="QLabel" name="labelTest">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>590</y>
-     <width>161</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(100, 100, 100);
-color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>下一题  &gt;&gt;</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelQuestion">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>200</y>
-     <width>521</width>
+     <y>160</y>
+     <width>121</width>
      <height>41</height>
     </rect>
    </property>
@@ -61,36 +35,7 @@ color: rgb(255, 255, 255);</string>
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>完全的 全部的 绝对的</string>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::AutoText</enum>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButtonExit">
-   <property name="geometry">
-    <rect>
-     <x>1060</x>
-     <y>635</y>
-     <width>140</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(100, 100, 100);
-color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>返回首页</string>
+    <string>测试单词库：</string>
    </property>
   </widget>
   <widget class="QLabel" name="labelTitle">
@@ -112,15 +57,60 @@ color: rgb(255, 255, 255);</string>
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>中译英选择练习</string>
+    <string>中译英翻译练习-配置页面</string>
    </property>
   </widget>
-  <widget class="QLabel" name="labelLocation">
+  <widget class="QLabel" name="labelFailed">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>120</y>
-     <width>191</width>
+     <y>470</y>
+     <width>441</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 30, 30);</string>
+   </property>
+   <property name="text">
+    <string>请选择测试单词库！</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonTest">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>160</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>选择单词库</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelTestInfo">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>160</y>
+     <width>551</width>
      <height>41</height>
     </rect>
    </property>
@@ -134,15 +124,15 @@ color: rgb(255, 255, 255);</string>
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>当前题目：1/50</string>
+    <string>未选择测试单词库</string>
    </property>
   </widget>
-  <widget class="QRadioButton" name="radioButtonA">
+  <widget class="QRadioButton" name="radioButtonRandom">
    <property name="geometry">
     <rect>
-     <x>52</x>
-     <y>280</y>
-     <width>661</width>
+     <x>320</x>
+     <y>290</y>
+     <width>121</width>
      <height>31</height>
     </rect>
    </property>
@@ -152,22 +142,90 @@ color: rgb(255, 255, 255);</string>
      <pointsize>14</pointsize>
     </font>
    </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>随机模式</string>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelOrder">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>285</y>
+     <width>131</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>14</pointsize>
+    </font>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>A.  absolute</string>
+    <string>题目顺序设置：</string>
    </property>
   </widget>
-  <widget class="QRadioButton" name="radioButtonB">
+  <widget class="QPushButton" name="pushButtonStart">
    <property name="geometry">
     <rect>
-     <x>52</x>
-     <y>360</y>
-     <width>661</width>
+     <x>50</x>
+     <y>400</y>
+     <width>161</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>开始测试！</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonExit">
+   <property name="geometry">
+    <rect>
+     <x>1060</x>
+     <y>635</y>
+     <width>140</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>返回首页</string>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="radioButtonOrdered">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>290</y>
+     <width>121</width>
      <height>31</height>
     </rect>
    </property>
@@ -177,64 +235,17 @@ color: rgb(255, 255, 255);</string>
      <pointsize>14</pointsize>
     </font>
    </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
-   </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>B.  absolute</string>
+    <string>顺序模式</string>
    </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButtonC">
-   <property name="geometry">
-    <rect>
-     <x>52</x>
-     <y>440</y>
-     <width>661</width>
-     <height>31</height>
-    </rect>
+   <property name="checked">
+    <bool>true</bool>
    </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>14</pointsize>
-    </font>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>C.  absolute</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButtonD">
-   <property name="geometry">
-    <rect>
-     <x>52</x>
-     <y>520</y>
-     <width>661</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>14</pointsize>
-    </font>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>D.  absolute</string>
+   <property name="autoExclusive">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
